--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ itemadapter = "^0.1.0"
 lxml = "^4.6.2"
 PyDispatcher = "^2.0.5"
 Pillow = "^8.1.2"
+Brotli = "^1.0.9"
+zstandard = "^0.15.2"
 
 [tool.poetry.dev-dependencies]
 tox = "^3.23.0"
